# desk-buddy

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  desk-buddy.db
core/: Cargo.toml  README.md  REVIEW.md
core/migrations/: 0001_initial_schema.sql  0002_add_hydration_snooze_minutes.sql
core/src/: error.rs  lib.rs  main.rs
core/src/adapters/: mod.rs
core/src/adapters/inbound/: core_facade.rs  mod.rs
core/src/adapters/inbound/scheduler/: hydration_scheduler.rs  mod.rs
core/src/adapters/middleware/: mod.rs
core/src/adapters/outbound/: mod.rs
core/src/adapters/outbound/events/: mod.rs  stdout_sink.rs
core/src/adapters/outbound/sqlite/: connection.rs  hydration_log_repository.rs  migrations.rs  mod.rs  settings_repository.rs
core/src/api/: core_api.rs  mod.rs
core/src/application/: hydration_service.rs  mod.rs  settings_service.rs
core/src/bootstrap/: config_resolver.rs  core_builder.rs  core_runtime.rs  mod.rs
core/src/domain/: hydration.rs  mod.rs
core/src/ports/: hydration_log_repository.rs  mod.rs  reminder_event_sink.rs  settings_repository.rs
docs/: TODOS.md
